Fixed tests, including migration to JUNIT5